package com.semaine2.vendredi29.Media;

public class Publisher {
    String name;

    public Publisher( String name){
        this.name = name;
    }

    public String toString(){
        return name;
    }
}
