@startuml

title __MEDIA's Class Diagram__\n

  package com.semaine2.vendredi29.Media {
    class Book {
        ~ nbPage : int
        + Book()
        + getNetPlace()
    }
  }
  

  package com.semaine2.vendredi29.Media {
    class DVD {
        ~ nbRegion : int
        + DVD()
        + toString()
        + getRegion()
        + getPriceCuts()
    }
  }
  

  package com.semaine2.vendredi29.Media {
    class Main {
        {static} + main()
    }
  }
  

  package com.semaine2.vendredi29.Media {
    class Media {
        ~ price : double
        ~ title : String
        + Media()
        + setPrice()
        + getPrice()
        + setTitle()
        + getTitle()
        + getNetPlace()
        + toString()
    }
  }
  

  package com.semaine2.vendredi29.Media {
    class Publisher {
        ~ name : String
        + Publisher()
        + toString()
    }
  }
  

  Book -up-|> Media
  DVD -up-|> Media
  Media o-- Publisher : publisher


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
